# voice-agent-openai-agents-sdk

./: .gitignore  README.md  agent1.py  main.py  pyproject.toml  streamlit_app.py
src/voice_agent/: __init__.py  app.py  config.py  gemini_audio.py  workflow.py
